--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ charset-normalizer==2.0.12
 frozenlist==1.3.0
 idna==3.3
 multidict==6.0.2
+packaging==21.3
+Pillow==9.1.1
 py-cord==2.0.0rc1
+pyparsing==3.0.9
+pytesseract==0.3.9
 python-dotenv==0.20.0
 yarl==1.7.2
